
Incompatible changes in svn version:

   * XSpectra: variable ef_r, used to eliminate the occupied states
               from the spectrum, replaced by new variable xe0  

Fixed in svn version:

   * Symmetry printout could lead to error exit in same cases

Incompatible changes in 5.1.1 version:

   * Regularization of DFT names for nonlocal functionals:
       "vdw-df3"                   replaced by "vdw-df-obk8"
       "vdw-df4" and "optb86b-vdw" replaced by "vdw-df-ob86"
       "rev-vdw-df2"               replaced by "vdw-df2-b86r"
     Explanation: We have tried to unify the naming convention of the vdW-DF 
     family of functionals built on "Dion et al., PRL 92, 246401 (2004)." 
     Within this family, numbering should be used for different non-local
     pieces of the functionals, such as vdW-DF2. If functionals only change the
     (semi)local contribution, the choice of (semi)local functional should be 
     attached at the end of the name, such as vdW-DF-C09 or vdW-DF-cx.

New in 5.1.1 version:

   * CP: Hybrid functionals with Wannier functions
   * Added possibility to provide structure via space-group number and
     Wyckoff positions (experimental)
   * Added vdW-DF-cx, Berland and Hyldgaard, PRB 89, 035412 (2014)
     (courtesy of Timo Thonhauser)
   * PW: TB09 meta-GGA functional (requires libxc)
   * PW: the code can capture "signals". typically sent by batch queues
     when allowed time is close to expire, and terminate gracefully.
     Experimental, to be enabled at compile time (see the user guide)
   * TDDFPT: Implemented a restart option in turbo_Davidson

Fixed in 5.1.1 version:

   * PWscf: variable-cell glitches at last scf step 
   * PWscf & PHonon: added several check for unimplemented features
   * PWscf: energy related to external forces wasn't correct
   * CP: Wannier functions dynamics with nspin=2 wasn't working
   * PWscf: restart in variable-cell case wasn't working in v.5.1