@@ -22,7 +22,7 @@ SUBROUTINE sum_band()
   USE fft_base,             ONLY : dfftp, dffts
   USE fft_interfaces,       ONLY : fwfft, invfft
   USE gvect,                ONLY : ngm, g, nl, nlm
-  USE gvecs,              ONLY : nls, nlsm, doublegrid
+  USE gvecs,                ONLY : nls, nlsm, doublegrid
   USE klist,                ONLY : nks, nkstot, wk, xk, ngk
   USE fixed_occ,            ONLY : one_atom_occupations
   USE ldaU,                 ONLY : lda_plus_U
@@ -93,31 +93,30 @@ SUBROUTINE sum_band()
      ! ... occupation is less than 1.0 %
      !
      btype(:,:) = 1
-     !
      FORALL( ik = 1:nks, wk(ik) > 0.D0 )
-        !
         WHERE( wg(:,ik) / wk(ik) < 0.01D0 ) btype(:,ik) = 0
-        !
      END FORALL
      !
   END IF
   !
-  ! ... Needed for LDA+U
+  ! ... Needed for LDA+U: compute occupations of Hubbard states
   !
   IF (lda_plus_u) THEN
-   IF(noncolin) THEN
-    CALL new_ns_nc(rho%ns_nc)
-   ELSE
-    CALL new_ns(rho%ns)
-   ENDIF
+     IF(noncolin) THEN
+        CALL new_ns_nc(rho%ns_nc)
+     ELSE
+        CALL new_ns(rho%ns)
+     ENDIF
   ENDIF
   !
-  IF ( okvan.OR.one_atom_occupations ) CALL allocate_bec_type (nkb,nbnd, becp,intra_bgrp_comm)
+  ! ... Allocate (and later deallocate) arrays needed in specific cases
   !
-  ! ... specific routines are called to sum for each k point the contribution
-  ! ... of the wavefunctions to the charge
-  !
+  IF ( okvan ) CALL allocate_bec_type (nkb,nbnd, becp,intra_bgrp_comm)
   IF (dft_is_meta() .OR. lxdm) ALLOCATE (kplusg(npwx))
+  !
+  ! ... specialized routines are called to sum at Gamma or for each k point 
+  ! ... the contribution of the wavefunctions to the charge
+  !
   IF ( gamma_only ) THEN
      !
      CALL sum_band_gamma()
@@ -127,6 +126,7 @@ SUBROUTINE sum_band()
      CALL sum_band_k()
      !
   END IF
+  !
   IF (dft_is_meta() .OR. lxdm) DEALLOCATE (kplusg)
   !
   IF( okpaw )  THEN
@@ -139,7 +139,7 @@ SUBROUTINE sum_band()
      CALL PAW_symmetrize(rho%bec)
   ENDIF
   !
-  IF ( okvan .OR. one_atom_occupations ) CALL deallocate_bec_type ( becp )
+  IF ( okvan ) CALL deallocate_bec_type ( becp )
   !
   ! ... If a double grid is used, interpolate onto the fine grid
   !
@@ -315,8 +315,10 @@ SUBROUTINE sum_band()
                    !
                    IF( idx + ibnd - 1 < nbnd ) THEN
                       DO j = 1, npw
-                         tg_psi(nls (igk(j))+ioff) =        evc(j,idx+ibnd-1) + (0.0d0,1.d0) * evc(j,idx+ibnd)
-                         tg_psi(nlsm(igk(j))+ioff) = CONJG( evc(j,idx+ibnd-1) - (0.0d0,1.d0) * evc(j,idx+ibnd) )
+                         tg_psi(nls (igk(j))+ioff) =       evc(j,idx+ibnd-1) +&
+                              (0.0d0,1.d0) * evc(j,idx+ibnd)
+                         tg_psi(nlsm(igk(j))+ioff) = CONJG(evc(j,idx+ibnd-1) -&
+                              (0.0d0,1.d0) * evc(j,idx+ibnd) )
                       END DO
                    ELSE IF( idx + ibnd - 1 == nbnd ) THEN
                       DO j = 1, npw
@@ -360,7 +362,8 @@ SUBROUTINE sum_band()
                    w2 = w1
                 END IF
                 !
-                CALL get_rho_gamma(tg_rho, dffts%tg_npp( me_bgrp + 1 ) * dffts%nr1x * dffts%nr2x, w1, w2, tg_psi)
+                CALL get_rho_gamma(tg_rho, dffts%tg_npp( me_bgrp + 1 ) * &
+                                   dffts%nr1x * dffts%nr2x, w1, w2, tg_psi)
                 !
              ELSE
                 !
@@ -371,9 +374,9 @@ SUBROUTINE sum_band()
                    ! ... two ffts at the same time
                    !
                    psic(nls(igk(1:npw)))  = evc(1:npw,ibnd) + &
-                                               ( 0.D0, 1.D0 ) * evc(1:npw,ibnd+1)
+                                           ( 0.D0, 1.D0 ) * evc(1:npw,ibnd+1)
                    psic(nlsm(igk(1:npw))) = CONJG( evc(1:npw,ibnd) - &
-                                               ( 0.D0, 1.D0 ) * evc(1:npw,ibnd+1) )
+                                           ( 0.D0, 1.D0 ) * evc(1:npw,ibnd+1) )
                    !
                 ELSE
                    !
@@ -545,7 +548,10 @@ SUBROUTINE sum_band()
           !
        END DO k_loop
        !
-       IF( becp%comm /= mp_get_comm_null() ) call mp_sum( becsum, becp%comm )
+       ! ... with distributed <beta|psi>, sum over bands
+       !
+       IF( okvan .AND. becp%comm /= mp_get_comm_null() ) &
+            CALL mp_sum( becsum, becp%comm )
        !
        IF( dffts%have_task_groups ) THEN
           DEALLOCATE( tg_psi )
